--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required (VERSION 2.8.7)
 
 project (MultiprojectorCalibrate)
 
+include_directories(BEFORE include)
 add_subdirectory (src)
-include_directories(include)
+
