--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 2.8.7)
 project (multiproj_calib_GUI)
 
-set(CMAKE_AUTOMOC ON)
-
 set (SOURCES main.cpp gui_form.cpp)
 
 set (MOC_HEADERS gui_form.h)
@@ -12,7 +10,7 @@ set (UIS gui_form.ui)
 find_package (Qt4 REQUIRED)
 include (${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
-include_directories (${CMAKE_BINARY_DIR} /usr/include/qt4 /usr/include/qt4/QtGui)
+include_directories (${CMAKE_BINARY_DIR})
 
 QT4_WRAP_UI (UI_HEADERS ${UIS})
 QT4_WRAP_CPP(MOC_SRC ${MOC_HEADERS})
